--- a/Poke V.2/index.html
+++ b/Poke V.2/index.html
@@ -38,7 +38,8 @@
         
         <div id="todos">
             <div class="pokemon-todos" id="listaPokemon">
-                <div class="pokemon">
+
+                <!-- <div class="pokemon">
                     <p class="pokemon-id-back">#025</p>
                     <div class="pokemon-imagen">
                         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="Pikachu">
@@ -57,12 +58,13 @@
                             <p class="stat">60kg</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
+
             </div>
         </div>
 
     </main>
 
-    <script src="./logic/main2.js"></script>
+    <script src="./logic/main.js"></script>
 </body>
 </html>
