--- a/list/index.html
+++ b/list/index.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>players</title>
 </head>
 <body>
-    
-
-
-
 
     <div id="lista-jugadores"></div>
 
