--- a/Game  YuGiOh/index.html
+++ b/Game  YuGiOh/index.html
@@ -26,6 +26,6 @@
       <h2>PLayer 2 : <span>0</span></h2>
     </div>
 
-    <script src="./clases.js"></script>
+    <script src="./YuGiOH.js"></script>
   </body>
 </html>
