--- a/GameTurnos/index.html
+++ b/GameTurnos/index.html
@@ -10,8 +10,8 @@
 
 
     <div class="contenedor">
-
-        <!-- <div class="personaje">
+<!-- 
+        <div class="personaje">
             <div class="character">
                 <img src="./UI/assets/img/thosr.gif" alt="Thort">
             </div>
@@ -24,12 +24,12 @@
                 <p>Vida : 40</p>
             </div>
             <div class="poderes">
-                <button id="poder1">Poder 1</button>
+                <button id="poder1" class="btn_Active">Poder 1</button>
                 <button id="poder2">Poder 2</button>
                 <button id="poder3">Poder 3</button>
             </div>
-        </div>
-    -->
+        </div> -->
+   
     </div>
 
 
