--- a/tablaposiciones/player.html
+++ b/tablaposiciones/player.html
@@ -9,7 +9,7 @@
   <body>
     <div class="contenedor">
 
-      <!-- <div class="jugador">
+      <div class="jugador">
         <h2 class="posicion">1</h2>
         <div class="imagen">
           <img src="./img/avatar.jpg" alt="" />
@@ -18,7 +18,7 @@
           <h2 class="nombre">Yeffer Moreno</h2>
         </div>
         <h2 class="puntaje">25</h2>
-      </div> -->
+      </div>
 
      
     </div>
