--- a/tablaposiciones/player.html
+++ b/tablaposiciones/player.html
@@ -7,18 +7,10 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Tabla de posiciones</h1>
     <div class="contenedor">
 
-      <div class="jugador">
-        <h2 class="posicion">1</h2>
-        <div class="imagen">
-          <img src="./img/avatar.jpg" alt="" />
-        </div>
-        <div class="nombre">
-          <h2 class="nombre">Yeffer Moreno</h2>
-        </div>
-        <h2 class="puntaje">25</h2>
-      </div>
+     
 
      
     </div>
