--- a/To-do/index.html
+++ b/To-do/index.html
@@ -11,7 +11,7 @@ b<!DOCTYPE html>
       <h1>Ed's todo List</h1>
     </header>
     <form>
-      <input type="text" class="todo-input" />
+      <input type="text" class="todo-input" id="Principal" />
       <button class="todo-button" type="submit">
         <i class="fas fa-plus-square"></i>
       </button>
