--- a/IU/index.html
+++ b/IU/index.html
@@ -9,9 +9,13 @@
   </head>
   <body>
     <div class="esenario">
-      <!-- <div class="esenario__left">
+       <!-- <div class="esenario__left">
 
-        <div class="personaje p1">
+        <div class="personaje  p1">
+          <div class="poderes">
+            <button>Atacar</button>
+            <button>Furia</button>
+          </div>
           <div class="personaje_Principal">
             <img class="PJ" src="./img/guerreroFD.gif" />
             <div class="shadow_left"></div>
@@ -43,37 +47,36 @@
         </div>
       </div>
 
-      <div class="esenario_right">
+      <div class="esenario_right ">
         <div class="personaje p4">
           <div class="personaje_Secundario">
-            <img class="PJ" src="./img/ATK_Right.gif" alt="" />
+            <img class="PJ" src="./img/ATK_right .gif" alt="" />
           </div>
           <div class="personaje_Principal">
             <img class="PJ" src="./img/P4.gif" />
-            <div class="shadow_right"></div>
+            <div class="shadow_right "></div>
           </div>
         </div>
         <div class="personaje p5">
           <div class="personaje_Secundario">
-            <img class="PJ" src="./img/ATK_Right.gif" alt="" />
+            <img class="PJ" src="./img/ATK_right .gif" alt="" />
           </div>
           <div class="personaje_Principal">
             <img class="PJ " src="./img/P5.gif" />
-            <div class="shadow_right"></div>
+            <div class="shadow_right "></div>
           </div>
         </div>
         <div class="personaje p6">
           <div class="personaje_Secundario">
-            <img class="PJ" src="./img/ATK_Right.gif" alt="" />
+            <img class="PJ" src="./img/ATK_right .gif" alt="" />
           </div>
           <div class="personaje_Principal">
             <img class="PJ" src="./img/P6.gif" />
-            <div class="shadow_right"></div>
+            <div class="shadow_right "></div>
           </div>
         </div>
-      </div> -->
+      </div>  -->
     </div>
-
 
     <script src="./logic/habilidaes.js"></script>
     <script src="./logic/idea.js"></script>
