--- a/IU/index.html
+++ b/IU/index.html
@@ -9,13 +9,12 @@
   </head>
   <body>
     <div class="esenario">
-       <!-- <div class="esenario__left">
+
+      <div class="backGround"></div>
+       <div class="esenario__left">
 
         <div class="personaje  p1">
-          <div class="poderes">
-            <button>Atacar</button>
-            <button>Furia</button>
-          </div>
+      
           <div class="personaje_Principal">
             <img class="PJ" src="./img/guerreroFD.gif" />
             <div class="shadow_left"></div>
@@ -75,13 +74,13 @@
             <div class="shadow_right "></div>
           </div>
         </div>
-      </div>  -->
+      </div> 
     </div>
-
+<!-- 
     <script src="./logic/habilidaes.js"></script>
     <script src="./logic/idea.js"></script>
     <script src="./logic/juego.js"></script>
-    <script src="./main.js"></script>
+    <script src="./main.js"></script> -->
     <!-- <div class="buttons">
       <button class="daño">Damage</button>
       <button class="atk">ATK</button>
