--- a/IU/index.html
+++ b/IU/index.html
@@ -9,19 +9,24 @@
   </head>
   <body>
     <div class="esenario">
+      <div class="backGround">
+        <div class="poderes">
 
-      <div class="backGround"></div>
-       <div class="esenario__left">
-
-        <div class="personaje  p1">
-      
+        </div>
+        <div class="imagen">
+          <img src="./players/Darkoz/Darkoz_wallpaper.png" alt="" />
+        </div>
+      </div>
+      <div class="esenario__left">
+        <div class="personaje p1">
           <div class="personaje_Principal">
-            <img class="PJ" src="./img/guerreroFD.gif" />
+            <img class="PJ" src="./img/hoz.gif" />
+
             <div class="shadow_left"></div>
           </div>
 
           <div class="personaje_Secundario">
-            <img class="PJ" src="./img/ATK_Left.gif" alt="" />
+            <!-- <img class="PJ" src="./img/ATK_Left.gif" alt="" /> -->
           </div>
         </div>
 
@@ -31,29 +36,30 @@
             <div class="shadow_left"></div>
           </div>
           <div class="personaje_Secundario">
-            <img class="PJ" src="./img/momia_ATK_Left.gif" alt="" />
+            <!-- <img class="PJ" src="./img/ball_ATK_Left.gif" alt="" /> -->
           </div>
         </div>
 
         <div class="personaje p3">
           <div class="personaje_Principal">
-            <img class="PJ" src="./img/hoz.gif" />
+            <img class="PJ" src="./img/guerreroFD.gif" />
+
             <div class="shadow_left"></div>
           </div>
           <div class="personaje_Secundario">
-            <img class="PJ" src="./img/ball_ATK_Left.gif" alt="" />
+            <!-- <img class="PJ" src="./img/momia_ATK_Left.gif" alt="" /> -->
           </div>
         </div>
       </div>
 
-      <div class="esenario_right ">
+      <div class="esenario_right">
         <div class="personaje p4">
           <div class="personaje_Secundario">
             <img class="PJ" src="./img/ATK_right .gif" alt="" />
           </div>
           <div class="personaje_Principal">
             <img class="PJ" src="./img/P4.gif" />
-            <div class="shadow_right "></div>
+            <div class="shadow_right"></div>
           </div>
         </div>
         <div class="personaje p5">
@@ -61,8 +67,8 @@
             <img class="PJ" src="./img/ATK_right .gif" alt="" />
           </div>
           <div class="personaje_Principal">
-            <img class="PJ " src="./img/P5.gif" />
-            <div class="shadow_right "></div>
+            <img class="PJ" src="./img/P5.gif" />
+            <div class="shadow_right"></div>
           </div>
         </div>
         <div class="personaje p6">
@@ -71,12 +77,12 @@
           </div>
           <div class="personaje_Principal">
             <img class="PJ" src="./img/P6.gif" />
-            <div class="shadow_right "></div>
+            <div class="shadow_right"></div>
           </div>
         </div>
-      </div> 
+      </div>
     </div>
-<!-- 
+    <!-- 
     <script src="./logic/habilidaes.js"></script>
     <script src="./logic/idea.js"></script>
     <script src="./logic/juego.js"></script>
