--- a/IU/index.html
+++ b/IU/index.html
@@ -5,12 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./animation/style.css" />
     <link rel="stylesheet" href="./animation/animation.css" />
+  
     <title>Document</title>
-  </head>
+  </head> 
+  
   <body>
     <div class="esenario">
       <div class="backGround">
-        <div class="poderes">
+        <div class="poderes"  >
+          <div class="poder1">
+            <img src="./players/Darkoz/poderes/p3.png" alt="">
+          </div>
+          <div class="poder2">
+            <img src="./players/Darkoz/poderes/p3.png" alt="">
+          </div>
 
         </div>
         <div class="imagen">
@@ -18,9 +26,12 @@
         </div>
       </div>
       <div class="esenario__left">
+        <div class="informacion_left">
+
+        </div>
         <div class="personaje p1">
           <div class="personaje_Principal">
-            <img class="PJ" src="./img/hoz.gif" />
+            <img class="PJ" id="PJNA" src="./img/hoz.gif" />
 
             <div class="shadow_left"></div>
           </div>
@@ -80,19 +91,21 @@
             <div class="shadow_right"></div>
           </div>
         </div>
+
+        <div class="informacion_right">
+          
+        </div>
       </div>
     </div>
+
+
+
     <!-- 
     <script src="./logic/habilidaes.js"></script>
     <script src="./logic/idea.js"></script>
     <script src="./logic/juego.js"></script>
     <script src="./main.js"></script> -->
-    <!-- <div class="buttons">
-      <button class="daño">Damage</button>
-      <button class="atk">ATK</button>
-      <button class="veneno">Poison</button>
-      <button class="curar">Heal</button>
-      <button class="muerte">💀</button>
-    </div> -->
+    <script src="./animation/animation.js"></script>
+
   </body>
 </html>
