--- a/IU/index.html
+++ b/IU/index.html
@@ -5,49 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./animation/style.css" />
     <link rel="stylesheet" href="./animation/animation.css" />
-  
+
     <title>Document</title>
-  </head> 
-  
+  </head>
+
   <body>
     <div class="esenario">
       <div class="backGround">
-        <div class="poderes"  >
+        <div class="poderes">
           <div class="poder1">
-            <img src="./players/Darkoz/poderes/p3.png" alt="">
+            <img src="./players/Darkoz/poderes/p3.png" alt="" />
           </div>
           <div class="poder2">
-            <img src="./players/Darkoz/poderes/p3.png" alt="">
+            <img src="./players/Darkoz/poderes/p3.png" alt="" />
           </div>
-
         </div>
         <div class="imagen">
           <img src="./players/Darkoz/Darkoz_wallpaper.png" alt="" />
         </div>
       </div>
       <div class="esenario__left">
-        <div class="informacion_left">
+        <div class="informacion_left"></div>
 
-        </div>
         <div class="personaje p1">
           <div class="personaje_Principal">
-            <img class="PJ" id="PJNA" src="./img/hoz.gif" />
-
+            <img class="PJ" id="PJNA" src="./img/P7.gif" />
             <div class="shadow_left"></div>
           </div>
 
           <div class="personaje_Secundario">
-            <!-- <img class="PJ" src="./img/ATK_Left.gif" alt="" /> -->
+            <img class="PJ" src="" alt="" />
           </div>
         </div>
 
         <div class="personaje p2">
           <div class="personaje_Principal">
-            <img class="PJ" src="./img/lizzard.gif" />
+            <img class="PJ" src="./img/P8.gif" />
             <div class="shadow_left"></div>
           </div>
           <div class="personaje_Secundario">
-            <!-- <img class="PJ" src="./img/ball_ATK_Left.gif" alt="" /> -->
+            <img class="PJ" src="" alt="" />
           </div>
         </div>
 
@@ -58,7 +55,7 @@
             <div class="shadow_left"></div>
           </div>
           <div class="personaje_Secundario">
-            <!-- <img class="PJ" src="./img/momia_ATK_Left.gif" alt="" /> -->
+            <img class="PJ" src="" alt="" />
           </div>
         </div>
       </div>
@@ -66,39 +63,37 @@
       <div class="esenario_right">
         <div class="personaje p4">
           <div class="personaje_Secundario">
-            <img class="PJ" src="./img/ATK_right .gif" alt="" />
+            <img class="PJ" src="" alt="" />
           </div>
           <div class="personaje_Principal">
             <img class="PJ" src="./img/P4.gif" />
             <div class="shadow_right"></div>
           </div>
         </div>
+
         <div class="personaje p5">
           <div class="personaje_Secundario">
-            <img class="PJ" src="./img/ATK_right .gif" alt="" />
+            <img class="PJ" src="" alt="" />
           </div>
           <div class="personaje_Principal">
             <img class="PJ" src="./img/P5.gif" />
             <div class="shadow_right"></div>
           </div>
         </div>
+
         <div class="personaje p6">
           <div class="personaje_Secundario">
-            <img class="PJ" src="./img/ATK_right .gif" alt="" />
+            <img class="PJ" src="" alt="" />
           </div>
           <div class="personaje_Principal">
-            <img class="PJ" src="./img/P6.gif" />
+            <img class="PJ" src="./img/P9.gif" />
             <div class="shadow_right"></div>
           </div>
         </div>
 
-        <div class="informacion_right">
-          
-        </div>
+        <div class="informacion_right"></div>
       </div>
     </div>
-
-
 
     <!-- 
     <script src="./logic/habilidaes.js"></script>
@@ -106,6 +101,6 @@
     <script src="./logic/juego.js"></script>
     <script src="./main.js"></script> -->
     <script src="./animation/animation.js"></script>
-
+    <script src="./batalla.js"></script>
   </body>
 </html>
