--- a/IU/index.html
+++ b/IU/index.html
@@ -11,8 +11,13 @@
 
   <body>
     <div class="esenario">
+
       
-      <div class="backGround">
+      <div class="snow">
+        <video src="./video/snow.mp4"  autoplay muted loop ></video>
+      </div>
+      
+      <!-- <div class="backGround">
         <div class="poderes">
           <div class="poder1">
             <img src="./players/Darkoz/poderes/p3.png" alt="" />
@@ -24,7 +29,7 @@
         <div class="imagen">
           <img src="./players/Darkoz/Darkoz_wallpaper.png" alt="" />
         </div>
-      </div>
+      </div> -->
       <!-- <div class="esenario__left">
         <div class="informacion_left"></div>
 
