--- a/IU/index.html
+++ b/IU/index.html
@@ -101,6 +101,22 @@
       </div> -->
     </div>
 
+    <!-- <div class="informacion">
+      <div class="stats">
+        <h2>Yeffer Moreno</h2>
+        <p class="ataque">ATK : 100</p>
+        <p class="defensa">DEF: 100</p>
+        <p class="vida">LIFE : 100</p>
+
+      </div>
+
+      <div class="habilidades">
+        <button class="poder1">Destello</button>
+        <button class="poder2">Biloret</button>
+      </div>
+
+    </div> -->
+
     
     <script src="./logic/habilidaes.js"></script>
     <script src="./logic/personajes.js"></script>
