--- a/IU/index.html
+++ b/IU/index.html
@@ -11,19 +11,17 @@
 
   <body>
     <div class="esenario">
-
-      
       <div class="snow">
-        <video src="./video/snow.mp4"  autoplay muted loop ></video>
+        <video src="./video/snow.mp4" autoplay muted loop></video>
       </div>
+    </div>
 
     <script src="./logic/habilidaes.js"></script>
     <script src="./logic/personajes.js"></script>
     <script src="./logic/juego.js"></script>
-    
+
     <script src="./ui/animation.js"></script>
-    <script src="./ui/batalla.js"></script>
-    <script src="/ui/turnos.js"></script>
     <script src="./ui/main.js"></script>
+    <script src="./ui/batalla.js"></script>
   </body>
 </html>
