--- a/IU/index.html
+++ b/IU/index.html
@@ -12,9 +12,14 @@
   <body>
     <div class="esenario">
       <div class="snow">
-        <video src="./video/snow.mp4" autoplay muted loop></video>
+        <video src="./video/rain.mp4" autoplay muted loop></video>
+      </div>
+      <div class="thunder">
+        <video src="./video/thunders2.mp4" autoplay muted loop></video>
       </div>
     </div>
+
+    
 
     <script src="./logic/habilidaes.js"></script>
     <script src="./logic/personajes.js"></script>
