--- a/RPG Battle Game/index.html
+++ b/RPG Battle Game/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/escenarioEquipo1.css">
+    <link rel="stylesheet" href="./css/escenarioEquipo2.css">
     <link rel="stylesheet" href="./css/animation.css" />
     <link rel="stylesheet" href="./css/estadisticas.css">
 
