--- a/RPG Battle Game/index.html
+++ b/RPG Battle Game/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/escenarioEquipo2.css">
     <link rel="stylesheet" href="./css/animation.css" />
     <link rel="stylesheet" href="./css/estadisticas.css">
+    <link rel="stylesheet" href="./css/seleccion.css">
 
     <title>Document</title>
   </head>
