--- a/RPG Battle Game/index.html
+++ b/RPG Battle Game/index.html
@@ -22,6 +22,30 @@
         <video src="./video/thunders2.mp4" autoplay muted loop></video>
       </div>
 
+      <div class="informacion">
+        <div class="habilidades">
+            <button class="btn_habilidad poder_Atacar">
+                <img class="imagen_atacar"  src="" alt="">
+            </button>
+            <button class="btn_habilidad poder_1">
+                <img class="imagen_Poder1" src="" alt="">
+                <img class="imagen_cooldown" src="" alt="">
+                <p class="cooldown_habilidad1 cooldown"></p>
+            </button>
+            <button class="btn_habilidad poder_2">
+                <img class="imagen_Poder2" src="" alt="">
+                <img class="imagen_cooldown" src="" alt="">
+                <p class="cooldown_habilidad2 cooldown"></p>
+            </button>
+        </div>
+        <div class="detalle_poder">
+            <p class="nombre_poder">Nombre del Poder</p>
+            <p class="descripcion_poder">Descripción del poder</p>
+            <p class="descripcion_tiempo">(Reutilizable en X turno(s))</p>
+        </div>
+      </div>
+    
+
 
 
     </div>
