--- a/RPG Battle Game/index.html
+++ b/RPG Battle Game/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link rel="stylesheet" href="./css/escenarioEquipo1.css">
-    <link rel="stylesheet" href="./css/escenarioEquipo2.css">
+    <link rel="stylesheet" href="./css/escenarioEquipo1.css" />
+    <link rel="stylesheet" href="./css/escenarioEquipo2.css" />
     <link rel="stylesheet" href="./css/animation.css" />
-    <link rel="stylesheet" href="./css/estadisticas.css">
-    <link rel="stylesheet" href="./css/seleccion.css">
+    <link rel="stylesheet" href="./css/estadisticas.css" />
+    <link rel="stylesheet" href="./css/seleccion.css" />
 
     <title>Document</title>
   </head>
@@ -22,45 +22,39 @@
         <video src="./video/thunders2.mp4" autoplay muted loop></video>
       </div>
 
+      <div class="esenarioEquipo1"></div>
+
+      <div class="esenario_right"></div>
+
       <div class="informacion">
         <div class="habilidades">
-            <button class="btn_habilidad poder_Atacar">
-                <img class="imagen_atacar"  src="" alt="">
-            </button>
-            <button class="btn_habilidad poder_1">
-                <img class="imagen_Poder1" src="" alt="">
-                <img class="imagen_cooldown" src="" alt="">
-                <p class="cooldown_habilidad1 cooldown"></p>
-            </button>
-            <button class="btn_habilidad poder_2">
-                <img class="imagen_Poder2" src="" alt="">
-                <img class="imagen_cooldown" src="" alt="">
-                <p class="cooldown_habilidad2 cooldown"></p>
-            </button>
+          <button class="btn_habilidad poder_Atacar">
+            <img class="imagen_atacar" src="" alt="" />
+          </button>
+          <button class="btn_habilidad poder_1">
+            <img class="imagenPoder1" src="" alt="" />
+            <img class="imagen_cooldown" src="" alt="" />
+            <p class="cooldown_habilidad1 cooldown"></p>
+          </button>
+          <button class="btn_habilidad poder_2">
+            <img class="imagenPoder2" src="" alt="" />
+            <img class="imagen_cooldown" src="" alt="" />
+            <p class="cooldown_habilidad2 cooldown"></p>
+          </button>
         </div>
         <div class="detalle_poder">
-            <p class="nombre_poder">Nombre del Poder</p>
-            <p class="descripcion_poder">Descripción del poder</p>
-            <p class="descripcion_tiempo">(Reutilizable en X turno(s))</p>
+          <p class="nombre_poder">Nombre del Poder</p>
+          <p class="descripcion_poder">Descripción del poder</p>
+          <p class="descripcion_tiempo">(Reutilizable en X turno(s))</p>
         </div>
       </div>
-    
-
-
-
     </div>
-
-
-
-
-
 
     <script src="./logic/habilidaes.js"></script>
     <script src="./logic/personajes.js"></script>
     <script src="./logic/juego.js"></script>
-    
+
     <script src="./ui/main.js"></script>
     <script src="./ui/batalla.js"></script>
   </body>
 </html>
- 
