--- a/RPG Battle Game/index.html
+++ b/RPG Battle Game/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/escenarioEquipo1.css" />
     <link rel="stylesheet" href="./css/escenarioEquipo2.css" />
     <link rel="stylesheet" href="./css/animation.css" />
     <link rel="stylesheet" href="./css/estadisticas.css" />
-    <link rel="stylesheet" href="./css/seleccion.css" />
+    <link rel="stylesheet" href="./css/habilidades.css" />
 
     <title>Document</title>
   </head>
@@ -24,7 +24,7 @@
 
       <div class="esenarioEquipo1"></div>
 
-      <div class="esenario_right"></div>
+      <div class="esenarioEquipo2"></div>
 
       <div class="informacion">
         <div class="habilidades">
