--- a/RPG Battle Game/index.html
+++ b/RPG Battle Game/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/escenarioEquipo1.css" />
     <link rel="stylesheet" href="./css/escenarioEquipo2.css" />
