--- a/RPG Battle Game/index.html
+++ b/RPG Battle Game/index.html
@@ -49,6 +49,10 @@
           <p class="descripcion_tiempo">(Reutilizable en X turno(s))</p>
         </div>
       </div>
+
+      <div class="cinema">
+        
+      </div>
     </div>
 
     <script src="./logic/habilidaes.js"></script>
