--- a/RPG Battle Game/index.html
+++ b/RPG Battle Game/index.html
@@ -16,15 +16,15 @@
 
   <body>
     <div class="esenario">
-      <!-- <div class="snow">
+      <div class="snow">
         <video src="./video/rain.mp4" autoplay muted loop></video>
-      </div> -->
+      </div>
       <!-- <div class="snow">
         <video src="./video/snow.mp4" autoplay muted loop></video>
       </div> -->
-      <!-- <div class="thunder">
+      <div class="thunder">
         <video src="./video/thunders2.mp4" autoplay muted loop></video>
-      </div> -->
+      </div>
 
       <div class="esenarioEquipo1"></div>
 
