--- a/RPG Battle Game/index.html
+++ b/RPG Battle Game/index.html
@@ -61,5 +61,6 @@
 
     <script src="./ui/main.js"></script>
     <script src="./ui/batalla.js"></script>
+    <script src="./pruebasUI/prueba.js"></script>
   </body>
 </html>
