--- a/RPG Battle Game/index.html
+++ b/RPG Battle Game/index.html
@@ -17,11 +17,11 @@
   <body>
     <div class="esenario">
       <div class="snow">
-        <video src="./video/rain.mp4" autoplay muted loop></video>
+        <video src="./video/snow1.mp4" autoplay muted loop></video>
       </div>
-      <!-- <div class="snow">
+      <div class="snow">
         <video src="./video/snow.mp4" autoplay muted loop></video>
-      </div> -->
+      </div>
       <div class="thunder">
         <video src="./video/thunders2.mp4" autoplay muted loop></video>
       </div>
