--- a/TeachVideoGame/index.html
+++ b/TeachVideoGame/index.html
@@ -12,7 +12,9 @@
 <body>
 
     <div class="escenario">
-        <div class="fondo"></div>
+        <div class="fondo">
+            <img src="./FrontEnd/assets/img/campo/BG.png" alt="">
+        </div>
         <div class="escenario__equipo1"></div>
         <div class="escenario__equipo2"></div>
     </div>
