--- a/RPG Battle Game/Inicio.html
+++ b/RPG Battle Game/Inicio.html
@@ -5,7 +5,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Selección de Personajes RPG</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="./inicio.css">
 </head>
 <body>
   <div id="app">
@@ -25,6 +25,6 @@
       <button id="start-button">¡Comenzar Partida!</button>
     </div>
   </div>
-  <script type="module" src="/main.js"></script>
+  <script type="module" src="./inicio.js"></script>
 </body>
 </html>
