--- a/RPG Battle Game/Inicio.html
+++ b/RPG Battle Game/Inicio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drag and Drop Equipos</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./inicio.css">
 </head>
 <body>
     <h1>Drag and Drop - Equipos</h1>
@@ -25,6 +25,6 @@
 
     <button id="iniciar-btn">Iniciar</button>
 
-    <script src="script.js"></script>
+    <script src="./inicio.js"></script>
 </body>
 </html>
