--- a/TeachVideoGame/index.html
+++ b/TeachVideoGame/index.html
@@ -13,7 +13,7 @@
 
     <div class="escenario">
         <div class="fondo">
-            <img src="./FrontEnd/assets/img/campo/BG.png" alt="">
+            <img class="imagenFondo" src="./FrontEnd/assets/img/campo/BG2.jpg" alt="">
         </div>
         <div class="escenario__equipo1"></div>
         <div class="escenario__equipo2"></div>
