--- a/RPG Battle Game/index.html
+++ b/RPG Battle Game/index.html
@@ -21,7 +21,7 @@
       </div>
       
       <div class="thunder">
-        <video src="./video/thunders2.mp4" autoplay muted loop></video>
+        <!-- <video src="./video/thunders2.mp4" autoplay muted loop></video> -->
       </div>
 
       <div class="esenarioEquipo1"></div>
