--- a/TeachVideoGame/index.html
+++ b/TeachVideoGame/index.html
@@ -4,3 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="./FrontEnd/stylesheets/index.css">
+    <link rel="stylesheet" href="./FrontEnd/stylesheets/equipo1.css">
+    <link rel="stylesheet" href="./FrontEnd/stylesheets/equipo2.css">
+    <title>Document</title>
+</head>
+<body>
+
+    <div class="escenario">
+        <div class="fondo">
+            <img class="imagenFondo" src="./FrontEnd/assets/img/campo/BG2.jpg" alt="">
+        </div>
+        <div class="escenario__equipo1"></div>
+        <div class="escenario__equipo2"></div>
+    </div>
+
+
+    <script src="./BackEnd/habilidaes.js"></script>
+    <script src="./BackEnd/personajes.js"></script>
+    <script src="./BackEnd/juego.js"></script>
+    <script src="./FrontEnd/index.js"></script>
+</body>
+</html>
