--- a/TeachVideoGame/index.html
+++ b/TeachVideoGame/index.html
@@ -1,22 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="./FrontEnd/stylesheets/index.css">
-    <link rel="stylesheet" href="./FrontEnd/stylesheets/equipo1.css">
-    <link rel="stylesheet" href="./FrontEnd/stylesheets/equipo2.css">
-    <title>Document</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link rel="stylesheet" href="./FrontEnd/stylesheets/index.css" />
+    <link rel="stylesheet" href="./FrontEnd/stylesheets/equipo1.css" />
+    <link rel="stylesheet" href="./FrontEnd/stylesheets/equipo2.css" />
+    <link rel="stylesheet" href="./FrontEnd/stylesheets/habilidades.css" />
+    <link rel="stylesheet" href="./FrontEnd/stylesheets/animation/main.css" />
 
+
+    <title>Document</title>
+  </head>
+  <body>
     <div class="escenario">
-        <div class="fondo">
-            <img class="imagenFondo" src="./FrontEnd/assets/img/campo/BG2.jpg" alt="">
+
+        <!-- Seccion de Fondo -->
+
+      <div class="fondo">
+        <img
+          class="imagenFondo"
+          src="./FrontEnd/assets/img/campo/BG2.jpg"
+          alt=""
+        />
+      </div>
+
+
+      <!-- Seccion de Equipos  -->
+      <div class="escenario__equipo1"></div>
+
+      <div class="escenario__equipo2"></div>
+
+      <!-- Seccion de habilidades -->
+      <div class="seccionHabilidades">
+        <div class="habilidades">
+          <button class="btn_habilidad poder_Atacar">
+            <img class="imagen_atacar" src="" alt="" />
+          </button>
+          <button class="btn_habilidad poder_1">
+            <img class="imagenPoder1" src="" alt="" />
+            <p class="cooldown_habilidad1 cooldown"></p>
+          </button>
+          <button class="btn_habilidad poder_2">
+            <img class="imagenPoder2" src="" alt="" />
+            <p class="cooldown_habilidad2 cooldown"></p>
+          </button>
         </div>
-        <div class="escenario__equipo1"></div>
-        <div class="escenario__equipo2"></div>
+        <div class="descripcionHabilidades">
+          <p class="nombre_poder">Nombre del Poder</p>
+          <p class="descripcion_poder">Descripción del poder</p>
+          <p class="descripcion_tiempo">(Reutilizable en X turno(s))</p>
+        </div>
+      </div>
+
+
     </div>
 
 
@@ -24,5 +65,5 @@
     <script src="./BackEnd/personajes.js"></script>
     <script src="./BackEnd/juego.js"></script>
     <script src="./FrontEnd/index.js"></script>
-</body>
+  </body>
 </html>
