--- a/TeachVideoGame/index.html
+++ b/TeachVideoGame/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./FrontEnd/stylesheets/equipo2.css" />
     <link rel="stylesheet" href="./FrontEnd/stylesheets/habilidades.css" />
     <link rel="stylesheet" href="./FrontEnd/stylesheets/animation/main.css" />
+    <link rel="stylesheet" href="./FrontEnd/stylesheets/daño.css" />
 
 
     <title>Document</title>
