--- a/TeachVideoGame/index.html
+++ b/TeachVideoGame/index.html
@@ -40,14 +40,14 @@
       <div class="seccionHabilidades">
         <div class="habilidades">
           <button class="btn_habilidad poder_Atacar">
-            <img class="imagen_atacar" src="" alt="" />
+            <img class="imagen_atacar" src="" alt="" draggable="false"/>
           </button>
           <button class="btn_habilidad poder_1">
-            <img class="imagenPoder1" src="" alt="" />
+            <img class="imagenPoder1" src="" alt=""  draggable="false"/>
             <p class="cooldown_habilidad1 cooldown"></p>
           </button>
           <button class="btn_habilidad poder_2">
-            <img class="imagenPoder2" src="" alt="" />
+            <img class="imagenPoder2" src="" alt="" draggable="false"/>
             <p class="cooldown_habilidad2 cooldown"></p>
           </button>
         </div>
