--- a/RPG Battle Game/index.html
+++ b/RPG Battle Game/index.html
@@ -16,13 +16,22 @@
 
   <body>
     <div class="esenario">
+
+
+
+
       <div class="snow">
         <video src="./video/snow1.mp4" autoplay muted loop></video>
       </div>
       
       <div class="thunder">
-        <!-- <video src="./video/thunders2.mp4" autoplay muted loop></video> -->
+        <video src="./video/thunders2.mp4" autoplay muted loop></video>
       </div>
+
+
+
+
+
 
       <div class="esenarioEquipo1"></div>
 
