--- a/TeachVideoGame/home.html
+++ b/TeachVideoGame/home.html
@@ -27,7 +27,18 @@
         <div class="vignette">
             <img src="./FrontEnd/assets/img/scenes/vignette.png" alt="">
         </div>
+
+
+
+
+        <div class="menu">
+            <p class="inicarPartida">Iniciar Partida</p>
+            <p class="partidaRapida">Partida Rapida</p>
+            <p class="Opciones">Opciones</p>
+        </div>
     </div>
+
+
     
 
     <script src="./parallax.js"></script>
