--- a/TeachVideoGame/index.html
+++ b/TeachVideoGame/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./FrontEnd/stylesheets/habilidades.css" />
     <link rel="stylesheet" href="./FrontEnd/stylesheets/animation/main.css" />
     <link rel="stylesheet" href="./FrontEnd/stylesheets/daño.css" />
+    <link rel="stylesheet" href="./FrontEnd/stylesheets/final.css">
 
 
     <title>Document</title>
@@ -23,11 +24,10 @@
         <!-- Seccion de Fondo -->
 
       <div class="fondo">
-        <img
-          class="imagenFondo"
-          src="./FrontEnd/assets/img/campo/BG2.jpg"
-          alt=""
-        />
+        <img class="imagenFondo" src="./FrontEnd/assets/img/campo/BG2.jpg"alt=""/>
+      
+  
+
       </div>
 
 
@@ -58,6 +58,11 @@
         </div>
       </div>
 
+      <div class="victoria">
+        <video src="./FrontEnd/assets/videos/Final.mp4" autoplay muted ></video>
+      </div>
+
+  
 
     </div>
 
