--- a/TeachVideoGame/index.html
+++ b/TeachVideoGame/index.html
@@ -59,6 +59,11 @@
       </div>
 
       <div class="victoria">
+        <div class="seccionPersonajesVictoria">
+          <img src="" alt="" class="personajevictoria1">
+          <img src="" alt="" class="personajevictoria2">
+          <img src="" alt="" class="personajevictoria3">
+        </div>
         <video src="./FrontEnd/assets/videos/Final.mp4" autoplay muted ></video>
       </div>
 
