seccion final victtory

--- a/TeachVideoGame/index.html
+++ b/TeachVideoGame/index.html
@@ -60,11 +60,15 @@
 
       <div class="victoria">
         <div class="seccionPersonajesVictoria">
-          <img src="" alt="" class="personajevictoria1">
-          <img src="" alt="" class="personajevictoria2">
-          <img src="" alt="" class="personajevictoria3">
+
+          <div class="imagenesVictoria">
+            <img  src="./FrontEnd/assets/img/victoria/reptil.png" alt="" class="personajevictoria1 imagenVictoria">
+            <img  src="./FrontEnd/assets/img/victoria/steven.png" alt="" class="personajevictoria2 imagenVictoria">
+            <img  src="./FrontEnd/assets/img/victoria/rayo.png" alt="" class="personajevictoria3 imagenVictoria">
+          </div>
+
         </div>
-        <video src="./FrontEnd/assets/videos/Final.mp4" autoplay muted ></video>
+        <video src="./FrontEnd/assets/videos/Final2.mp4" autoplay muted ></video>
       </div>
 
   
