--- a/TeachVideoGame/index.html
+++ b/TeachVideoGame/index.html
@@ -68,6 +68,7 @@
           </div>
 
         </div>
+        <button class="botonReiniciar">Home</button>
         <video src="./FrontEnd/assets/videos/Final2.mp4" autoplay muted ></video>
       </div>
 
