--- a/TeachVideoGame/index.html
+++ b/TeachVideoGame/index.html
@@ -25,9 +25,7 @@
 
       <div class="fondo">
         <img class="imagenFondo" src="./FrontEnd/assets/img/campo/BG2.jpg"alt=""/>
-      
-  
-
+        <video class="videoFondo" src="./FrontEnd/assets/videos/nieve2.mp4" autoplay muted loop></video>
       </div>
 
 
@@ -62,9 +60,9 @@
         <div class="seccionPersonajesVictoria">
 
           <div class="imagenesVictoria">
-            <img  src="./FrontEnd/assets/img/victoria/reptil.png" alt="" class="personajevictoria1 imagenVictoria">
-            <img  src="./FrontEnd/assets/img/victoria/steven.png" alt="" class="personajevictoria2 imagenVictoria">
-            <img  src="./FrontEnd/assets/img/victoria/rayo.png" alt="" class="personajevictoria3 imagenVictoria">
+            <img  src="" alt="" class="personajevictoria1 imagenVictoria">
+            <img  src="" alt="" class="personajevictoria2 imagenVictoria">
+            <img  src="" alt="" class="personajevictoria3 imagenVictoria">
           </div>
 
         </div>
