--- a/TeachVideoGame/index.html
+++ b/TeachVideoGame/index.html
@@ -25,7 +25,7 @@
 
       <div class="fondo">
         <img class="imagenFondo" src="./FrontEnd/assets/img/campo/BG2.jpg"alt=""/>
-        <video class="videoFondo" src="./FrontEnd/assets/videos/nieve2.mp4" autoplay muted loop></video>
+        <video class="videoFondo" src="./FrontEnd/assets/videos/nieve1.mp4" autoplay muted loop></video>
       </div>
 
 
@@ -54,6 +54,11 @@
           <p class="descripcion_poder">Descripción del poder</p>
           <p class="descripcion_tiempo">(Reutilizable en X turno(s))</p>
         </div>
+      </div>
+
+      <div class="salud">
+        <!-- <img src="./FrontEnd/assets/img/efectos/salud.gif" alt=""> -->
+        <img src="./FrontEnd/assets/img/efectos/veneno4.gif" alt="">
       </div>
 
       <div class="victoria">
