--- a/TeachVideoGame/index.html
+++ b/TeachVideoGame/index.html
@@ -73,3 +73,16 @@
         </div>
         <button class="botonReiniciar">Home</button>
         <video src="./FrontEnd/assets/videos/Final2.mp4" autoplay muted ></video>
+      </div>
+
+  
+
+    </div>
+
+
+    <script src="./BackEnd/habilidaes.js"></script>
+    <script src="./BackEnd/personajes.js"></script>
+    <script src="./BackEnd/juego.js"></script>
+    <script src="./FrontEnd/index.js"></script>
+  </body>
+</html>
