--- a/Poke V.2/index.html
+++ b/Poke V.2/index.html
@@ -3,37 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/cards.css">
   <title>Pokémon API</title>
-  <style>
-    /* Estilos para las cartas */
-    #app {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      justify-content: center;
-      margin-top: 20px;
-    }
 
-    .pokemon-card {
-      border: 1px solid #ddd;
-      border-radius: 5px;
-      padding: 10px;
-      text-align: center;
-      width: 120px;
-      background-color: #f9f9f9;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-
-    .pokemon-card h3 {
-      font-size: 16px;
-      margin: 5px 0;
-    }
-  </style>
 </head>
 <body>
   <h1>Pokémon List</h1>
   <div id="app"></div>
 
-  <script src="script.js"></script>
+  <script src="./logic/script.js"></script>
 </body>
 </html>
